Labs/33-NetworkPolicies/manifests/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: netpol-backend
spec:
  podSelector: {}
  policyTypes:
    - Ingress
